tests/ui/invalid_pymodule_args.stderr
error: expected one of: `name`, `crate`, `module`, `submodule`, `gil_used`
 --> tests/ui/invalid_pymodule_args.rs:3:12
  |
3 | #[pymodule(some_arg)]
  |            ^^^^^^^^

error: `gil_used` may only be specified once
 --> tests/ui/invalid_pymodule_args.rs:8:39
  |
8 | #[pyforge::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
  |                                       ^^^^^^^^

error: `name` may only be specified once
 --> tests/ui/invalid_pymodule_args.rs:8:70
  |
8 | #[pyforge::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
  |                                                                      ^^^^

error: `gil_used` may only be specified once
  --> tests/ui/invalid_pymodule_args.rs:13:39
   |
13 | #[pyforge::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
   |                                       ^^^^^^^^

error: `name` may only be specified once
  --> tests/ui/invalid_pymodule_args.rs:13:70
   |
13 | #[pyforge::pymodule(gil_used = false, gil_used = true, name = "foo", name = "bar")]
   |                                                                      ^^^^
